# Product-Listing-Django-App

./: .env-template  .gitignore  README.md  build.sh  pyproject.toml  render.yaml
listings/: manage.py
listings/listing_app/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
listings/listing_app/migrations/: 0001_initial.py  0002_listingsapp_user.py  0003_alter_listingsapp_user.py
listings/listing_app/templates/listing_app/: all_listings.html  base.html  delete_listing.html  detail.html  edit_listing.html  greetings.html  index.html  my_listings.html  new_listing.html
listings/listings/: asgi.py  settings.py  urls.py  wsgi.py
listings/users/: forms.py  urls.py  views.py
listings/users/templates/registration/: login.html  register.html
setup_step/: db_postgreSQL_setup.txt  postgreSQL_setup.json
