[tool.poetry]
name = "listing"
version = "0.1.0"
description = ""
authors = ["David J Nevin <content@davidjnevin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"
psycopg2 = "^2.9.3"
Pillow = "^9.2.0"
python-decouple = "^3.6"
django-filter = "^22.1"
crispy-bootstrap5 = "^0.6"
dj-database-url = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
