[tool.poetry]
name = "listing"
version = "0.1.0"
description = "Basic Listing App: User authentication/authorization, and filters"
authors = ["David J Nevin <content@davidjnevin.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.6"
django-filter = "^22.1"
crispy-bootstrap5 = "^0.6"
dj-database-url = "^1.0.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
Django = "^4.1.1"
Pillow = "^9.2.0"
boto3 = "^1.24.77"
django-storages = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
